accuracy and css

--- a/face_project/templates/register.html
+++ b/face_project/templates/register.html
@@ -85,7 +85,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Register Face</h1>
+        <h1>REGISTER FACE</h1>
         <form id="registerForm">
             {% csrf_token %}
             <label>Enter Name:</label>
